--- a/css/style.css
+++ b/css/style.css
@@ -204,3 +204,69 @@ header h1 {
     padding: 12px 15px;
   }
 }
+
+*{
+  margin:0;
+  padding:0;
+  line-height: 1.3em;
+} 
+/* time-schedule */
+.time-schedule {
+  width: 100%;
+  max-width: 400px;
+  list-style: none;
+  margin: 0 auto;
+  padding-left: 10px;
+  border-left: 6px solid #d1a3ff;
+  box-sizing: border-box;
+}
+
+.time-schedule li {
+  width: 100%;
+  margin: 0 0;
+  padding: 5px 0;
+  position: relative;
+}
+
+.time-schedule span.time {
+  width: 5em;
+  display: inline-block;
+  margin-left: -3em;
+  padding-top: 15px;
+  padding-right: 10px;
+  position: relative;
+  text-align: right;
+  box-sizing: border-box;
+}
+
+.time-schedule span.time::after {
+  content: "";
+  position: absolute;
+  right: -40px;
+  top: ;
+  background: #d1a3ff;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+}
+
+.time-schedule .sch_box {
+  display: inline-block;
+  width: 100%;
+  margin-left: 30px;
+  padding: 15px 10px 10px 10px;
+  vertical-align: middle;
+  background: #efefef;
+  box-sizing: border-box;
+  border-radius: 6px;
+}
+
+.time-schedule .sch_title {
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.time-schedule .sch_tx {
+  font-size: 14px;
+  font-weight: normal;
+}
